Simpler parallel function and Update to Build 19-loom+6-625 (2022/4/29) (#24)
* Update to Build 19-loom+6-625 (2022/4/29)

* Bump up the Scala version to 3.1.2

* Upgrade dependencies

* Bump up the sbt version to 1.6.2

* Reorganize imports

* Remove unused types

* Upgrade JDK version in GitHub Actions workflows

* Format code

* Add jdk.incubator.concurrent module

* Update documentation about parallel computation

Co-authored-by: franciscodr <francisco.d@47deg.com>